feat(http): implement query parameters
* limit
* from
* to
